# python-project-49

./: .gitignore  Makefile  README.md  demo.cast  demo.upload  pyproject.toml  sa.py
brain_games/: cli.py  eng.py  engine.py  phras.py
brain_games/games/: br_calc.py  br_even.py  br_evens.py  br_gcd.py  br_prime.py  br_progression.py  calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
